spacing on the portfolio page corrected; useState implemented to make links stay green when selected but change back when something else is selected

--- a/src/style.css
+++ b/src/style.css
@@ -48,10 +48,10 @@ body {
   background: var(--db);
   left: 0;
   bottom: 0;
-  height: 50vh;
+  height: 45vh;
   width: 0;
   overflow: hidden;
-  max-width: 400px;
+  max-width: 100vw;
   z-index: 9;
   border-radius: 5px;
 }
@@ -60,14 +60,14 @@ body {
   width: 100%;
 }
 
-a {
+/* a {
   text-align: left;
   display: block;
   padding: 10px 20px;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: bold;
-}
+} */
 
 .menuNav li:first-child {
   margin-top: 7rem;
@@ -93,6 +93,12 @@ a {
   list-style-type: none;
 }
 
+.nav-item a {
+  text-align: left;
+  display: block;
+  padding: 10px 20px;
+}
+
 .nav-link {
   font-size: 2rem;
   font-weight: 400;
@@ -112,10 +118,10 @@ a {
   text-shadow: none;
 }
 
-.nav-link:focus {
+/* .nav-link:focus {
   color: var(--lg);
   text-shadow: none;
-}
+} */
 
 .section-header {
   margin-top: 50px;
@@ -279,9 +285,10 @@ a {
 
 .project-title {
   color: var(--off-white);
-  font-size: 2em;
+  font-size: 2rem;
   text-align: center;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+  text-overflow: clip;
 }
 
 .deployment {
@@ -363,10 +370,6 @@ footer h2 {
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
-  .nav-item {
-    font-size: 0.1rem;
-  }
-
   footer h2,
   footer div {
     text-align: center;
@@ -448,9 +451,8 @@ footer h2 {
     max-width: 12em;
   }
 
-  .projects {
-    flex-direction: column;
-    align-items: center;
+  .project-title {
+    font-size: 1em;
   }
 
   .projects img {
